# Opengl-Video-Render

./: CMakeLists.txt  README.md  auto.sh  compile.py  out
shaders/: camera_render.fs  init.fs  init.vs
src/: main.cpp  opengl_camera.cpp  opengl_camera.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_viewer.cpp  opengl_viewer.hpp
